[gd_scene load_steps=3 format=3 uid="uid://chatbubble"]

[ext_resource type="Script" uid="uid://gu5q5flh2hvr" path="res://scripts/ui/ChatBubble.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_username"]
content_margin_left = 10.0
content_margin_top = 3.0
content_margin_right = 10.0
content_margin_bottom = 3.0
bg_color = Color(0.961, 0.902, 0.827, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.545, 0.451, 0.333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[node name="PlayerChatStack" type="VBoxContainer"]
custom_minimum_size = Vector2(135, 0)
offset_right = 140.0
offset_bottom = 50.0
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="UsernamePanel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_username")

[node name="UsernameLabel" type="Label" parent="UsernamePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.141, 0.086, 1)
theme_override_font_sizes/font_size = 11
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="MessagesContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0